k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gowebapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gowebapp
            port:
              number: 80
